# dynamodb_playground

./: .gitignore  README.md
python/: dax_playground.py  pyproject.toml
terraform/dax/: main.tf  outputs.tf  variables.tf
terraform/dynamodb/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/iam/: main.tf  output.tf  variables.tf
