[tool.poetry]
name = "test-dax"
version = "0.1.0"
description = ""
authors = ["Wenmin Zhao <zhaowenmin01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.98"
botocore = "^1.34.98"
amazon-dax-client = "^2.0.3"
pynamodb = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
